--- a/index.html
+++ b/index.html
@@ -8,14 +8,34 @@
   <link rel="stylesheet" href="style.css">
 
   <!-- Bootstrap -->
-
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/css/bootstrap.min.css" integrity="sha512-jnSuA4Ss2PkkikSOLtYs8BlYIeeIK1h99ty4YfvRPAlzr377vr3CXDb7sb7eEEBYjDtcYj+AjBH3FLv5uSJuXg==" crossorigin="anonymous">
 
   <title>Our Team</title>
 </head>
 
 
 <body>
-  
+  <div class="container">
+    <h1>Our Team</h1>
+    <p></p>
+
+    <div class="row row-cols-3 bg-primary">
+
+      <div id="card" class="col d-flex bg-warning">
+        <img src="" alt="">
+        <div class="dati">
+          <h3 id="name">bbb</h3>
+          <span id="role">bbb</span> <br>
+          <span id="email">bb</span>
+        </div>
+      </div>
+
+
+    </div>
+
+
+
+  </div>
 
 
   <script src="script.js"></script>
