feat: add functions to print cards in index

--- a/index.html
+++ b/index.html
@@ -19,16 +19,16 @@
     <h1>Our Team</h1>
     <p></p>
 
-    <div class="row row-cols-3 bg-primary">
+    <div id="members-container" class="row row-cols-3 bg-primary">
 
-      <div id="card" class="col d-flex bg-warning">
+      <!-- <div id="card" class="col d-flex bg-warning">
         <img src="" alt="">
         <div class="dati">
           <h3 id="name">bbb</h3>
           <span id="role">bbb</span> <br>
           <span id="email">bb</span>
         </div>
-      </div>
+      </div> -->
 
 
     </div>
