--- a/index.html
+++ b/index.html
@@ -17,23 +17,43 @@
 <body>
   <div class="container">
     <h1>Our Team</h1>
-    <p></p>
+    <p>Scopri di più sui membri del team della nostra azienda.</p>
 
-    <div id="members-container" class="row row-cols-3 bg-primary">
-
-      <!-- <div id="card" class="col d-flex bg-warning">
-        <img src="" alt="">
-        <div class="dati">
-          <h3 id="name">bbb</h3>
-          <span id="role">bbb</span> <br>
-          <span id="email">bb</span>
-        </div>
-      </div> -->
-
-
+    <div id="members-container" class="row ">
+      <!-- CARDS -->
     </div>
 
+    <!-- Creo il Form per aggiungere il nuovo membro -->
+    
+    
+    <form action="#" class="row mt-5 ">
+      <div class="text-center">
+        <h2>Inserisci membro del Team</h2>
+        <p>Compila il form per inserire un nuovo membro.</p>
+      </div>
 
+      <div class="col col-12 col-md-6 text-center">
+        <label for="full-name" class="form-lable mt-3">Nome e Cognome:</label> <br>
+        <input type="text" id="full-name" class="form-control focus-ring focus-ring-dark border my-2" >
+      </div>
+      <div class="col col-12 col-md-6 text-center">
+        <label for="full-name" class="form-lable mt-3">Ruolo:</label> <br>
+        <input type="text" id="full-name" class="form-control focus-ring focus-ring-dark border my-2"  >
+      </div>
+      <div class="col col-12 col-md-6 text-center">
+        <label for="full-name" class="form-lable mt-3">Email:</label> <br>
+        <input type="text" id="full-name" class="form-control focus-ring focus-ring-dark border my-2" >
+      </div>
+      <div class="col col-12 col-md-6 text-center">
+        <label for="full-name" class="form-lable mt-3">Percorso immagine:</label> <br>
+        <input type="text" id="full-name" class="form-control focus-ring focus-ring-dark border my-2" >
+      </div>
+      <div class="col col-12 text-center py-4">
+        <button class="btn btn-dark mx-4">Conferma</button>
+        <button class="btn btn-dark mx-4">Cancella</button>
+      </div>
+
+    </form>
 
   </div>
 
