feat: add reset function

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
   <div class="container">
-    <h1>Our Team</h1>
+    <h1 class="fw-bold">Our Team</h1>
     <p>Scopri di più sui membri del team della nostra azienda.</p>
 
     <div id="members-container" class="row ">
@@ -49,8 +49,8 @@
         <input type="text" id="full-name" class="form-control focus-ring focus-ring-dark border my-2" >
       </div>
       <div class="col col-12 text-center py-4">
-        <button class="btn btn-dark mx-4">Conferma</button>
-        <button class="btn btn-dark mx-4">Cancella</button>
+        <button type="submit" class="btn btn-dark mx-4">Conferma</button>
+        <button type="reset" class="btn btn-dark mx-4">Cancella</button>
       </div>
 
     </form>
