feat: add button functions

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <h1 class="fw-bold">Our Team</h1>
     <p>Scopri di più sui membri del team della nostra azienda.</p>
 
-    <div id="members-container" class="row ">
+    <div id="members-container" class="row row-cols-3 g-2">
       <!-- CARDS -->
     </div>
 
@@ -33,20 +33,20 @@
       </div>
 
       <div class="col col-12 col-md-6 text-center">
-        <label for="full-name" class="form-lable mt-3">Nome e Cognome:</label> <br>
-        <input type="text" id="full-name" class="form-control focus-ring focus-ring-dark border my-2" >
+        <label for="name" class="form-lable mt-3">Nome e Cognome:</label> <br>
+        <input type="text" id="name" class="form-control focus-ring focus-ring-dark border my-2" >
       </div>
       <div class="col col-12 col-md-6 text-center">
-        <label for="full-name" class="form-lable mt-3">Ruolo:</label> <br>
-        <input type="text" id="full-name" class="form-control focus-ring focus-ring-dark border my-2"  >
+        <label for="role" class="form-lable mt-3">Ruolo:</label> <br>
+        <input type="text" id="role" class="form-control focus-ring focus-ring-dark border my-2"  >
       </div>
       <div class="col col-12 col-md-6 text-center">
-        <label for="full-name" class="form-lable mt-3">Email:</label> <br>
-        <input type="text" id="full-name" class="form-control focus-ring focus-ring-dark border my-2" >
+        <label for="email" class="form-lable mt-3">Email:</label> <br>
+        <input type="text" id="email" class="form-control focus-ring focus-ring-dark border my-2" >
       </div>
       <div class="col col-12 col-md-6 text-center">
-        <label for="full-name" class="form-lable mt-3">Percorso immagine:</label> <br>
-        <input type="text" id="full-name" class="form-control focus-ring focus-ring-dark border my-2" >
+        <label for="img" class="form-lable mt-3">Percorso immagine:</label> <br>
+        <input type="text" id="img" class="form-control focus-ring focus-ring-dark border my-2" >
       </div>
       <div class="col col-12 text-center py-4">
         <button type="submit" class="btn btn-dark mx-4">Conferma</button>
