feat: add style and header

--- a/index.html
+++ b/index.html
@@ -15,11 +15,30 @@
 
 
 <body>
-  <div class="container">
-    <h1 class="fw-bold">Our Team</h1>
-    <p>Scopri di più sui membri del team della nostra azienda.</p>
+  <header class="d-flex justify-content-between align-items-center px-4 ">
 
-    <div id="members-container" class="row row-cols-3 g-2">
+    <div class="logo d-flex">
+      <img src="img/Cattura.JPG" alt="logo">
+      <h1 class="text">SamCorporate</h1>
+    </div>
+    <div class="menu">
+      <ul class="d-flex">
+        <li>Chi siamo</li>
+        <li>Prodotti</li>
+        <li>Servizi</li>
+        <li>Contatti</li>
+      </ul>
+    </div>
+
+  </header>
+
+
+
+  <div class="container">
+    <h2 class="fw-bold text-center mt-4">Our Team</h2>
+    <p class="text-center mb-4">Scopri di più sui membri del team della nostra azienda.</p>
+
+    <div id="members-container" class="row row-cols-1 row-cols-md-2 row-cols-lg-3  g-2">
       <!-- CARDS -->
     </div>
 
