feat: fix style

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <!-- Creo il Form per aggiungere il nuovo membro -->
     
     
-    <form action="#" class="row mt-5 ">
+    <form action="#" class="row my-5 ">
       <div class="text-center">
         <h2>Inserisci membro del Team</h2>
         <p>Compila il form per inserire un nuovo membro.</p>
