feat: add Timing Function

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
     <!-- Creo il Form per aggiungere il nuovo membro -->
     
-    
+    <h2 id="messaggio" class="d-none text-center my-4" >Nuovo Membro del Team inserito correttamente</h2>
     <form action="#" class="row my-5 ">
       <div class="text-center">
         <h2>Inserisci membro del Team</h2>
@@ -52,16 +52,16 @@
       </div>
 
       <div class="col col-12 col-md-6 text-center">
-        <label for="name" class="form-lable mt-3">Nome e Cognome:</label> <br>
-        <input type="text" id="name" class="form-control focus-ring focus-ring-dark border my-2" >
+        <label for="name-input" class="form-lable mt-3">Nome e Cognome:</label> <br>
+        <input type="text" id="name-input" class="form-control focus-ring focus-ring-dark border my-2" >
       </div>
       <div class="col col-12 col-md-6 text-center">
-        <label for="role" class="form-lable mt-3">Ruolo:</label> <br>
-        <input type="text" id="role" class="form-control focus-ring focus-ring-dark border my-2"  >
+        <label for="role-input" class="form-lable mt-3">Ruolo:</label> <br>
+        <input type="text" id="role-input" class="form-control focus-ring focus-ring-dark border my-2"  >
       </div>
       <div class="col col-12 col-md-6 text-center">
-        <label for="email" class="form-lable mt-3">Email:</label> <br>
-        <input type="text" id="email" class="form-control focus-ring focus-ring-dark border my-2" >
+        <label for="email-input" class="form-lable mt-3">Email:</label> <br>
+        <input type="text" id="email-input" class="form-control focus-ring focus-ring-dark border my-2" >
       </div>
       <div class="col col-12 col-md-6 text-center">
         <label for="img" class="form-lable mt-3">Percorso immagine:</label> <br>
@@ -74,6 +74,7 @@
 
     </form>
 
+    <div class="loader d-none"></div>
   </div>
 
 
